# datapipline-api-airflow-to-kafka-spark-gcs

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt
.github/workflows/: test-api.yml  test-infra.yml
config/: pytest.ini
dags/: api.py
docker/: Dockerfile.test  docker-compose.test.yml
ksql/: create_streams.sql  gold_transform.sql  transform_to_silver.sql
scripts/: test-api.sh  test-ksql.sh  test-spark.sh  test-spark2.cmd
spark/: streaming_job.py
spark/streaming/: bronze_writer.py  gold_to_bigquery.py  silver_transformer.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
tests/: conftest.py
tests/integration/: test_api_kafka.py
tests/unit/: test_api_client.py  test_fetch_api.py  test_produce_kafka.py  test_validate.py
