[project]
name = "datapipline-api-airflow-to-kafka-spark-gcs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "kafka>=1.3.5",
    "kafka-python>=2.3.0",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
]
